# ZeroFlow

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: ZeroFlow.hpp
tests/: size_demo.cpp  test_fsm.cpp
